--- a/homeTest.html
+++ b/homeTest.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
     <head>
-        <title>Siesto</title>
+        <title>Siesto!</title>
         <meta charset="UTF-8">
         <link rel="stylesheet" type="text/css" href="Home.css">
         <script src="https://code.jquery.com/jquery-1.8.2.min.js"></script>
