--- a/homeTest.html
+++ b/homeTest.html
@@ -1,25 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-
-    <head>
-        <title>Siesto!</title>
-        <meta charset="UTF-8">
-        <link rel="stylesheet" type="text/css" href="Home.css">
-        <script src="https://code.jquery.com/jquery-1.8.2.min.js"></script>
-        <script src="Home.js"></script>
-    </head>
-
-        <header> 
-
-        </header>
-
-        <main>
-                
-        </main>
-
-        <footer>
-           
-        </footer>
-    </body>
+<html>
+    <title> Siesto Testing</title>
+    <body>Hello World!</body>
 </html>
 
