--- a/Sample.html
+++ b/Sample.html
@@ -1,5 +1,5 @@
 <html>
-    <title> Testing</title>
-    <body>Hello </body>
+    <title> Sample File</title>
+    <body>Hello USER </body>
 </html>
 
