--- a/homeTest.html
+++ b/homeTest.html
@@ -1,5 +1,5 @@
 <html>
-    <title> Siesto Testing!</title>
-    <body>Hello World!</body>
+    <title> Siesto Testing</title>
+    <body>Hello World</body>
 </html>
 
